welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:33: error: Unmatched closing brace '}' ignored here
def lignemotif2(a:Color,b:Color) {motif2(a);motif1(b)};avance();motif2(a);motif1(b)}}  
                                                                                    ^PatternPicture:35: error: eof expected but '}' found.
}
^